fix: card alignment; cards content

--- a/css/style.css
+++ b/css/style.css
@@ -19,14 +19,17 @@ body {
     margin: auto;
     font-family: "Fredoka", sans-serif;
     font-style: normal;
-    max-width: 70%;
+    width: 1140px;
 }
 
+ul {
+    list-style-type: none;
+}
 
 /*header*/
 
 header {
-    margin: 40px 0;
+    margin: 30px 0;
 }
 
 header h1 {
@@ -39,37 +42,38 @@ header h1 {
 
 .description {
     text-align: center;
-    margin: 40px 0;
+    margin: 30px 0;
 }
 
 .card-container {
     background-color: #ffffff;
     display: flex;
     flex-wrap: wrap;
-
+    justify-content: center;
 }
-
 
 /*cards*/
 
 .card-container .card {
     background-color: #0f0e17;
     color: white;
-    width: 22.5rem;
+    width: calc(100% / 3 - 30px);
     display: flex;
-    margin-bottom: 25px;
+    margin: 20px 15px;
+    box-shadow: 5px 3px 5px #c4c4c3;
 }
 
 .card-container .card img {
     width: 100px;
     height: auto;
-    flex-shrink: 0;
 }
 
 .card-container .card .member-info {
+    padding: 10px;
     display: flex;
     flex-direction: column;
-    padding: 15px;
+    flex-shrink: 0;
+    justify-content: space-around;
 }
 
 .card-container .card .name {
